tests/ui/type-alias-impl-trait/opaque-alias-relate-issue-151331.stderr
error[E0308]: mismatched types
  --> $DIR/opaque-alias-relate-issue-151331.rs:7:18
   |
LL | fn make_foo() -> Foo {}
   |    --------      ^^^ expected `Vec<_>`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression
   |
   = note: expected struct `Vec<_>`
           found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
